2009-09-10   1.5.0.alpha20 	- Renamed Config to ServerConfig 	- ServerConfig: new properties: MAIL_USER, MAIL_PASSWORD 	- New MailSender helper to send new password to a user ({activation,mail}.jar included) 	- Server: new operations: 		LoginResult authenticateUser(String userName, String userPassword); 		ResetPasswordResult resetUserPassword(String username); 		UserInfoResult getUserInfo(String username);