@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8" ?>
-<project name="iserver" default="war" basedir=".">
+<project name="iserver" default="jar" basedir=".">
 
   <property file="version.properties" />
   <property file="build.properties" />	
@@ -34,6 +34,9 @@
   	<pathelement path="base_war/WEB-INF/lib/org.mmi.util.jar"/>
   	<pathelement path="base_war/WEB-INF/lib/org.mmi.ont.util.jar"/>
   	<pathelement path="base_war/WEB-INF/lib/datafile.jar"/>
+  	
+  	<pathelement path="base_war/WEB-INF/lib/activation.jar"/>
+	<pathelement path="base_war/WEB-INF/lib/mail.jar"/>
   </path>
 
 	<target name="init">
@@ -42,43 +45,7 @@
 		</tstamp>
 	</target>
 
-  <target name="gwt-compiler-help">
-  	<java classname="com.google.gwt.dev.GWTCompiler" fork="false">
-		<classpath>
-			<pathelement path="${GWT_HOME}/gwt-user.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-dev-linux.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-dev-mac.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-dev-win.jar"/>
-	    </classpath>
-		<arg value="-help"/>
-    </java>
-  </target>
 
-  <target name="gwt-compile" description="Compile gwt stuff">
-  	<java classname="com.google.gwt.dev.GWTCompiler" fork="true">
-		<classpath>
-			<pathelement path="src"/>
-			<pathelement path="base_war/WEB-INF/lib/org.mmisw.iserver.gwt.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-user.jar"/>
-			<!-- you have one of the following three: -->
-			<pathelement path="${GWT_HOME}/gwt-dev-linux.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-dev-mac.jar"/>
-			<pathelement path="${GWT_HOME}/gwt-dev-win.jar"/>
-	    </classpath>
-		 <classpath refid="project.class.path"/>
-		<jvmarg value="-Xmx512m"/>
-		<jvmarg value="-Xms256m"/>
-		<jvmarg value="-XX:PermSize=64M"/>
-		<jvmarg value="-XX:MaxPermSize=128M"/>
-		<arg value="-logLevel"/>
-		<arg value="INFO"/>
-		<arg value="-style"/>
-		<arg value="DETAILED"/>
-		<arg value="-out"/>
-		<arg value="www"/>
-		<arg value="org.mmisw.iserver.gwt.IServer"/>
-    </java>
-  </target>
 
   <target name="compile" depends="init">
     <mkdir dir="bin"/>
@@ -104,45 +71,6 @@
 	</jar>
   </target>
 
-    <target name="war" depends="jar, gwt-compile">
-    	<!-- prepare tmp.WebContent -->
-		<copy todir="${build.dir}/tmp.WebContent">
-			<fileset dir="base_war">
-				<exclude name="WEB-INF/web.xml" />
-				<exclude name="WEB-INF/lib**" />
-				<exclude name="WEB-INF/classes/log4j.xml" />
-			</fileset>
-		</copy>
-
-		<copy file="base_war/WEB-INF/web.xml" 
-			tofile="${build.dir}/tmp.WebContent/WEB-INF/web.xml" overwrite="true">
-			<filterset>
-				<filter token="iserver.app.version"        value="${iserver.app.version}" />
-				<filter token="iserver.app.build"          value="${iserver.app.build}" />
-			</filterset>
-		</copy>
-
-		<copy file="base_war/WEB-INF/classes/log4j.xml" 
-			tofile="${build.dir}/tmp.WebContent/WEB-INF/classes/log4j.xml" overwrite="true">
-			<filterset>
-				<filter token="iserver.app.logfilepath"       value="${iserver.app.logfilepath}" />
-				<filter token="iserver.app.maxlogfilesize"    value="${iserver.app.maxlogfilesize}" />
-				<filter token="iserver.app.maxlogbackupindex" value="${iserver.app.maxlogbackupindex}" />
-				<filter token="iserver.app.log.deflevel"      value="${iserver.app.log.deflevel}" />
-				<filter token="iserver.app.log.iserverlevel"    value="${iserver.app.log.iserverlevel}" />
-			</filterset>
-		</copy>
-
-        <war warfile="${build.dir}/iserver.war" webxml="${build.dir}/tmp.WebContent/WEB-INF/web.xml">
-                <fileset dir="www/org.mmisw.iserver.gwt.IServer" />
-        	    <fileset dir="${build.dir}/tmp.WebContent" />
-                <lib dir="base_war/WEB-INF/lib" />
-        </war>
-    	
-        <delete includeEmptyDirs="true" failonerror="false">
-                <fileset dir="${build.dir}/tmp.WebContent" />
-        </delete>
-    </target>     	
 
   <target name="clean">
     <delete file="base_war/WEB-INF/lib/org.mmisw.iserver.gwt.jar"/>
@@ -152,26 +80,5 @@
   </target>
 
 
-	<target name="shell" depends="jar">
-		<java classname="com.google.gwt.dev.GWTShell" fork="true">
-			<classpath>
-				<pathelement path="src"/>
-				<pathelement path="base_war/WEB-INF/lib/org.mmisw.iserver.gwt.jar"/>
-				<pathelement path="${GWT_HOME}/gwt-user.jar"/>
-				<!-- you have one of the following three: -->
-				<pathelement path="${GWT_HOME}/gwt-dev-linux.jar"/>
-				<pathelement path="${GWT_HOME}/gwt-dev-mac.jar"/>
-				<pathelement path="${GWT_HOME}/gwt-dev-win.jar"/>
-		    </classpath>
-			 <classpath refid="project.class.path"/>
-			<jvmarg value="-XstartOnFirstThread"/>
-			<jvmarg value="-Xmx256M"/>
-			<arg value="-port"/>
-			<arg value="9999"/>
-			<arg value="-out"/>
-			<arg value="www"/>
-			<arg value="org.mmisw.iserver.gwt.IServer/index.html"/>
-		</java>
-	</target>
 
 </project>
